# Seeker

./: .dockerignore  Dockerfile  docker-compose.yml  example.env  pyproject.toml  pyrightconfig.json  ruff.toml
seeker/: __main__.py  config.py  log.py  main.py
seeker/bot/: seeker_bot.py
