[project]
name = "seeker"
version = "0.1.0"
description = "A powerful Discord auditing bot for tracking events, ensuring transparency, and supporting effective moderation."
authors = [{ name = "Daniel Lima" }]
license = { text = "MIT" }
keywords = ["discord", "bot", "moderation", "audit", "logging", "asyncio"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Topic :: Communications :: Chat",
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiomysql>=0.3.2",
    "alembic>=1.18.4",
    "discord-py>=2.7.1",
    "python-dotenv>=1.2.2",
    "sqlalchemy[asyncio]>=2.0.48",
]

[dependency-groups]
dev = ["pyright>=1.1.408", "ruff>=0.15.8"]
